fix (SelectDropdown) Align activator for SelectDropdown to the left (#1260)
* Align activator for SelectDropdown to the left

* Update changelog

* Bold component text

--- a/data/csswhat/oui.css
+++ b/data/csswhat/oui.css
@@ -5924,7 +5924,8 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  display: block; }
+  display: block;
+  text-align: left; }
 
 .oui-sheet {
   position: fixed;
